--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body id = 'body'>
+  <script src="./pre.js"></script>
   <div class = "holder">
   	<canvas id="output"></canvas>
   	<i class="mic fa fa-microphone fa-5x" onclick="switchcolor()"></i>
